# live-henkan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-task.md
.github/copilot/: instructions.md
.github/workflows/: ci.yml
crates/converter/: Cargo.toml
crates/converter/src/: lib.rs
crates/converter/tests/: passthrough_integration.rs
crates/dictionary/: Cargo.toml
crates/dictionary/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/romaji/: Cargo.toml
crates/romaji/src/: lib.rs
crates/scorer/: Cargo.toml
crates/scorer/src/: lib.rs
crates/tsf-frontend/: Cargo.toml
crates/tsf-frontend/src/: main.rs
crates/tui-prototype/: Cargo.toml
crates/tui-prototype/src/: main.rs
data/dictionary/: supplemental.csv
docs/: AGENT-WORKFLOW.md  CRATE-SURVEY.md  WSL-SETUP.md
scripts/: create-issues.sh  setup-dict.sh
training/: README.md  export.py  model.py  prepare_data.py  requirements.txt  train.py
