[workspace]
resolver = "2"
members = [
    "crates/romaji",
    "crates/dictionary",
    "crates/converter",
    "crates/scorer",
    "crates/engine",
    "crates/tui-prototype",
    # "crates/tsf-frontend",  # Enable when Windows TSF work begins
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/<your-username>/live-henkan"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Romaji ⇔ Hiragana (replaces custom Trie implementation)
wana_kana = "4"

# Encoding (EUC-JP dictionary files)
encoding_rs = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"
